--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Qurossword - A javascript crossword puzzle plugin</title>
+	<title>Crossword - A javascript crossword puzzle plugin</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="assets/css/screen.css">
 </head>
@@ -14,27 +14,8 @@
 <body>
 	
 <div id="puzzle-wrapper"><!-- crossword puzzle appended here --></div>
-<button id="solution">Solution</button>
-<button id="save">Save</button>
 
-<form method="post">
-	<label for="alumniNr">Alumni number:</label>
-	<input id="alumniNr" type="text">
-	<label for="name">Name:</label>
-	<input id="name" type="text" required>
-	<label for="email">Email:</label>
-	<input id="email" type="text" required>
-	<label for="college">College:</label>
-	<input id="college" type="text" required>
-	<label for="yearOfMatric">Year of matriculation: *</label>
-	<input id="yearOfMatric" type="text">
-	<label for="notes">Solution notes/comments:</label>
-	<textarea id="notes"></textarea>
-
-	<button type="submit" disabled>Submit</button>
-</form>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="assets/js/jquery-3.4.1.min.js"></script>
 <script src="assets/js/jquery.crossword.js"></script>
 <script src="assets/js/script.js"></script>
 </body>
